Update Azure Filesystem information

--- a/docs/source/filesystems.mdx
+++ b/docs/source/filesystems.mdx
@@ -6,8 +6,7 @@
 |----------------------|---------------------------------------------------------------|
 | Amazon S3            | [s3fs](https://s3fs.readthedocs.io/en/latest/)                |
 | Google Cloud Storage | [gcsfs](https://gcsfs.readthedocs.io/en/latest/)              |
-| Azure DataLake       | [adl](https://github.com/dask/adlfs)                          |
-| Azure Blob           | [abfs](https://github.com/dask/adlfs)                         |
+| Azure Blob/DataLake  | [adlfs](https://github.com/fsspec/adlfs)                      |
 | Dropbox              | [dropboxdrivefs](https://github.com/MarineChap/dropboxdrivefs)|
 | Google Drive         | [gdrivefs](https://github.com/intake/gdrivefs)                |
 
