--- a/docs/source/audio_dataset_script.mdx
+++ b/docs/source/audio_dataset_script.mdx
@@ -2,7 +2,7 @@
 
 There are two methods for creating and sharing an audio dataset. This guide will show you how to:
 
-* Create an audio dataset with `AudioFolder` and some metadata. This is a no-code solution for quickly creating an audio dataset.
+* Create an audio dataset for use with `AudioFolder` and metadata. This is a no-code solution for quickly creating a smaller audio dataset to experiment with.
 
 * Create an audio dataset by writing a loading script. This method is a bit more involved, but you have greater flexibility over how a dataset is defined, downloaded, and generated.
 
@@ -24,14 +24,14 @@ folder/train/en_us/9644097927007796370.wav
 folder/train/fr_fr/14945328524472190788.wav
 ```
 
-Then users can load your dataset by specifying `audiofolder` in load_dataset() and the directory in `data_dir`:
+Then users can load your dataset by specifying `audiofolder` in [`load_dataset`] and the directory in `data_dir`:
 
 ```py
 >>> from datasets import load_dataset
 >>> dataset = load_dataset("audiofolder", data_dir="/path/to/folder")
 ```
 
-This is useful for audio classification, but for other audio tasks, you may need to include additional information about your dataset like transcription, speaker accent or speaker intent. This information can be added in a `metadata.jsonl` file in your data folder, which lets you quickly create datasets for different audio tasks like automatic speech recognition:
+While this directory structure is useful for a task like audio classification, for other audio tasks, you may need to include additional information about your dataset like transcription, speaker accent or speaker intent. This information can be added in a `metadata.jsonl` file in your data folder, which lets you quickly create datasets for different audio tasks:
 
 ```
 folder/train/metadata.jsonl
@@ -39,6 +39,12 @@ folder/train/first_audio_file.mp3
 folder/train/second_audio_file.mp3
 folder/train/third_audio_file.mp3
 ```
+
+<Tip>
+
+If metadata files are present, the inferred labels based on the directory name are dropped by default. To include those labels, set `drop_labels=False` in [`load_dataset`].
+
+</Tip>
 
 The `metadata.jsonl` file needs a `file_name` column to link an audio file to it's metadata:
 
@@ -48,18 +54,64 @@ The `metadata.jsonl` file needs a `file_name` column to link an audio file to it
 {"file_name": "third_audio_file.mp3", "transcription": "pewnie kędyś w obłędzie ubite minęły szlaki zaczekajmy dzień jaki poślemy szukać wszędzie dziś jutro pewnie będzie posłali wszędzie sługi czekali dzień i drugi gdy nic nie doczekali z płaczem chcą jechać dali"}
 ```
 
+When you go to load the dataset, `AudioFolder` loads the audio data and creates a `transcription` column containing the text from `metadata.jsonl`:
+
+```py
+>>> from datasets import load_dataset
+
+>>> dataset = load_dataset("audiofolder", data_dir="/path/to/folder")
+>>> dataset["train"][0]
+{'audio':
+    {'path': '/path/to/extracted/audio/first_audio_file.mp3',
+    'array': array([ 0.00088501,  0.0012207 ,  0.00131226, ..., -0.00045776, -0.00054932, -0.00054932], dtype=float32),
+    'sampling_rate': 16000},
+ 'transcription': 'znowu się duch z ciałem zrośnie w młodocianej wstaniesz wiosnie i możesz skutkiem tych leków umierać wstawać wiek wieków dalej tam były przestrogi jak siekać głowę jak nogi'
+}
+```
+
+### Language identification
+
+Language identification datasets have audio recordings of speech in multiple languages:
+
+```
+folder/train/ar/0197_720_0207_190.wav
+folder/train/ar/0179_830_0185_540.mp3
+folder/train/ar/0179_830_0185_540.mp3
+
+folder/train/zh/0442_690_0454_380.mp3
+```
+
+Load the dataset with `AudioFolder`, and it will create a `label` column from the directory name (language id):
+
+```py
+>>> dataset = load_dataset("audiofolder", data_dir="/path/to/folder", drop_labels=False)
+>>> dataset["train"][0]
+{'audio':
+    {'path': '/path/to/extracted/audio/0197_720_0207_190.mp3',
+    'array': array([-3.6621094e-04, -6.1035156e-05,  6.1035156e-05, ..., -5.1879883e-04, -1.0070801e-03, -7.6293945e-04],
+    'sampling_rate': 16000}
+ 'label': 0  # "ar"
+}
+```
+
 ## Loading script
 
-Write a dataset loading script to share a dataset. It defines a dataset's splits and configurations, and handles downloading and generating a dataset. The script is located in the same folder or repository as the dataset.
+Write a dataset loading script to share a dataset. It defines a dataset's splits and configurations, and handles downloading and generating a dataset. The script should have the same name as your dataset folder or repository:
 
 ```
 my_dataset/
 ├── README.md
 ├── my_dataset.py
-└── data/  # optional, may contain your audio files or TAR archives
+└── data/
 ```
 
-This structure allows your dataset to be loaded in one line:
+<Tip>
+
+The `data` folder can be any name you want, it doesn't have to be `data`! This folder is optional, unless you're hosting your dataset - audio files or TAR archives - on the Hub.
+
+</Tip>
+
+This directory structure allows your dataset to be loaded in one line:
 
 ```py
 >>> from datasets import load_dataset
@@ -76,7 +128,7 @@ This guide will show you how to create a dataset loading script for audio datase
 * Generate the dataset metadata (optional).
 * Upload the dataset to the Hub.
 
-The best way to learn is to open up an existing audio dataset loading script, like [MInDS-14](https://huggingface.co/datasets/PolyAI/minds14), and follow along!
+The best way to learn is to open up an existing audio dataset loading script, like [VIVOS](https://huggingface.co/datasets/vivos), and follow along!
 
 <Tip>
 
@@ -90,13 +142,14 @@ To help you get started, we created a loading script [template](https://github.c
 
 * `info` stores information about your dataset like its description, license, and features.
 * `split_generators` downloads the dataset and defines its splits.
-* `generate_examples` generates the audio files and other features like transcription or speaker intent for each split.
+* `generate_examples` generates the dataset's samples containing the audio data and other features specified in `info` for each split.
 
 Start by creating your dataset class as a subclass of [`GeneratorBasedBuilder`] and add the three methods. Don't worry about filling in each of these methods yet, you'll develop those over the next few sections:
 
 ```py
-class Minds14(datasets.GeneratorBasedBuilder):
-    """MInDS-14 dataset"""
+class VivosDataset(datasets.GeneratorBasedBuilder):
+    """VIVOS is a free Vietnamese speech corpus consisting of 15 hours of recording speech prepared for
+    Vietnamese Automatic Speech Recognition task."""
 
     def _info(self):
 
@@ -107,76 +160,67 @@ class Minds14(datasets.GeneratorBasedBuilder):
 
 #### Multiple configurations
 
-In some cases, a dataset may have more than one configuration. For example, the MInDS-14 dataset has several configurations corresponding to different languages.
+In some cases, a dataset may have more than one configuration. For example, if you take a look at the [Multilingual LibriSpeech](https://huggingface.co/datasets/facebook/multilingual_librispeech) dataset, you'll notice there are several configurations corresponding to different languages.
 
-To create different configurations, use the [`BuilderConfig`] class to create a subclass for your dataset. Provide the links to download the audio files in `data_url`:
+To create different configurations, use the [`BuilderConfig`] class to create a subclass of your dataset. The only required parameter is the `name` of the configuration. Otherwise, you can specify any custom parameters you want in your configuration class. As you can see in this example, the authors also provide a link to download the audio files in `self.data_root_url`.
 
 ```py
-class Minds14Config(datasets.BuilderConfig):
-    """BuilderConfig for xtreme-s"""
+class MultilingualLibrispeechConfig(datasets.BuilderConfig):
+    """BuilderConfig for MultilingualLibrispeech."""
 
-    def __init__(
-        self, name, description, homepage, data_url
-    ):
-        super(Minds14Config, self).__init__(
-            name=self.name,
-            version=datasets.Version("1.0.0", ""),
-            description=self.description,
+    def __init__(self, name, **kwargs):
+        """
+        Args:
+          name: `string`, name of dataset config (=language)
+          **kwargs: keyword arguments forwarded to super.
+        """
+        super(MultilingualLibrispeechConfig, self).__init__(
+            version=datasets.Version("2.1.0", ""), name=name, **kwargs
         )
-        self.name = name
-        self.description = description
-        self.homepage = homepage
-        self.data_url = data_url
+        # relative path to full data inside a repo (for example `data/mls_german`)
+        self.data_root_url = _DL_URL_FORMAT.format(name=name)
 ```
 
-Now you can define your configurations at the top of [`GeneratorBasedBuilder`]. For memory intensive data formats like audio datasets, it is often a good idea to set a lower `writer_batch_size`: 
+Define your configurations at the top inside [`GeneratorBasedBuilder`], and provide a `name` and short `description` for each configuration:
 
 ```py
-class Minds14(datasets.GeneratorBasedBuilder):
+class MultilingualLibrispeech(datasets.GeneratorBasedBuilder):
+    """Multilingual Librispeech dataset."""
 
-    DEFAULT_WRITER_BATCH_SIZE = 1000
-    BUILDER_CONFIGS = [_build_config(name) for name in _ALL_CONFIGS + ["all"]]
+    BUILDER_CONFIGS = [
+        MultilingualLibrispeechConfig(name="german", description="German LibriSpeech dataset"),
+        MultilingualLibrispeechConfig(name="dutch", description="Dutch LibriSpeech dataset"),
+        MultilingualLibrispeechConfig(name="french", description="French LibriSpeech dataset"),
+        MultilingualLibrispeechConfig(name="spanish", description="Spanish LibriSpeech dataset"),
+        MultilingualLibrispeechConfig(name="italian", description="Italian LibriSpeech dataset"),
+        MultilingualLibrispeechConfig(name="portuguese", description="Portuguese LibriSpeech dataset"),
+        MultilingualLibrispeechConfig(name="polish", description="Polish LibriSpeech dataset"),
+    ]
 ```
 
-You'll notice the author of this particular loading script defined the configuration names earlier in the script, and created a function to build each configuration. It doesn't really matter how you create the configuration objects, but each configuration should have a name, description, and where to download the data from.
-
-```py
-_ALL_CONFIGS = sorted([
-    "cs-CZ", "de-DE", "en-AU", "en-GB", "en-US", "es-ES", "fr-FR", "it-IT", "ko-KR", "nl-NL", "pl-PL", "pt-PT", "ru-RU", "zh-CN"
-])
-
-def _build_config(name):
-    return Minds14Config(
-        name=name,
-        description=_DESCRIPTION,
-        homepage=_HOMEPAGE_URL,
-        data_url=_DATA_URL,
-    )
-```
-
-Now if users want to load the `ko-KR` configuration, they can use the configuration name:
+Now if users want to load the `polish` configuration, they can use the configuration name:
 
 ```py
 >>> from datasets import load_dataset
->>> dataset = load_dataset("PolyAI/minds14", "ko-KR", split="train")
+>>> dataset = load_dataset("facebook/multilingual_librispeech", "polish", split="train")
 ```
 
 ### Add dataset metadata
 
-Adding information about your dataset is useful for users to learn more about it. This information is stored in the [`DatasetInfo`] class which is returned by the `info` method. Users can access this information by:
+Adding information about your dataset helps users to learn more about it. This information is stored in the [`DatasetInfo`] class which is returned by the `info` method. Users can access this information by:
 
 ```py
 >>> from datasets import load_dataset_builder
->>> ds_builder = load_dataset_builder("PolyAI/minds14")
+>>> ds_builder = load_dataset_builder("vivos")
 >>> ds_builder.info
 ```
 
 There is a lot of information you can specify about your dataset, but some important ones to include are:
 
 1. `description` provides a concise description of the dataset.
-2. `features` specify the dataset column types. Since you're creating an audio loading script, you'll need to include the [`Audio`] feature and specify the `sampling_rate` of the dataset.
-3. `supervised_keys` specify the input feature and label.
-4. `homepage` provides a link to the dataset homepage.
+2. `features` specify the dataset column types. Since you're creating an audio loading script, you'll need to include the [`Audio`] feature and the `sampling_rate` of the dataset.
+3. `homepage` provides a link to the dataset homepage.
+4. `license` specify the permissions for using a dataset as defined by the license type.
 5. `citation` is a BibTeX citation of the dataset.
 
 <Tip>
@@ -187,130 +231,108 @@ You'll notice a lot of the dataset information is defined earlier in the loading
 
 ```py
 def _info(self):
-    task_templates = None
-    langs = _ALL_CONFIGS
-    features = datasets.Features(
-        {
-            "path": datasets.Value("string"),
-            "audio": datasets.Audio(sampling_rate=8_000),
-            "transcription": datasets.Value("string"),
-            "english_transcription": datasets.Value("string"),
-            "intent_class": datasets.ClassLabel(
-                names=[
-                    "abroad",
-                    "address",
-                    "app_error",
-                    "atm_limit",
-                    "balance",
-                    "business_loan",
-                    "card_issues",
-                    "cash_deposit",
-                    "direct_debit",
-                    "freeze",
-                    "high_value_payment",
-                    "joint_account",
-                    "latest_transactions",
-                    "pay_bill",
-                ]
-            ),
-            "lang_id": datasets.ClassLabel(names=langs),
-        }
-    )
-
     return datasets.DatasetInfo(
-    description=self.config.description + "\n" + _DESCRIPTION,
-    features=features,
-    supervised_keys=("audio", "transcription"),
-    homepage=self.config.homepage,
-    citation=_CITATION,
-    task_templates=task_templates,
-)
+        description=_DESCRIPTION,
+        features=datasets.Features(
+            {
+                "speaker_id": datasets.Value("string"),
+                "path": datasets.Value("string"),
+                "audio": datasets.Audio(sampling_rate=16_000),
+                "sentence": datasets.Value("string"),
+            }
+        ),
+        supervised_keys=None,
+        homepage=_HOMEPAGE,
+        license=_LICENSE,
+        citation=_CITATION,
+    )
 ```
 
 ### Download and define the dataset splits
 
-Now that you've added some information about your dataset, the next step is to download the dataset and generate the splits.
+Now that you've added some information about your dataset, the next step is to download the dataset and define the splits.
 
-1. Use the [`DownloadManager.download_and_extract`] method to download and extract the URLs. This method accepts:
+1. Use the [`~DownloadManager.download`] method to download and extract the given URLs. The URLs are replaced with a path to the local files. This method accepts:
 
-    * a name to a file inside a Hub dataset repository (in other words, the `data/` folder)
+    * a relative path to a file inside a Hub dataset repository (for example, in the `data/` folder)
     * a URL to a file hosted somewhere else
     * a list or dictionary of file names or URLs
 
-    For the `audio` and `text` data at these URLs, use the [`DownloadManager.extract`] method to extract the file paths.
+2. After you've downloaded the dataset, use the [`SplitGenerator`] to organize the audio files and sentence prompts in each split. Name each split with a standard name like: `Split.TRAIN`, `Split.TEST`, and `SPLIT.Validation`. 
 
-2. After you've downloaded the dataset, use the [`SplitGenerator`] to organize the audio files and text transcriptions in each split. Name each split with a standard name like: `Split.TRAIN`, `Split.TEST`, and `SPLIT.Validation`. 
-
-    In the `gen_kwargs` parameter, specify the file paths to the `audio` and `text` files to load. If necessary, you can use [`DownloadManager.iter_archive`] to iterate over audio files in TAR archives, which allows your dataset to be streamable. The `audio` and `text` file paths are actually passed onto the next step where you'll actually generate the dataset.
+    In the `gen_kwargs` parameter, specify the file path to the `prompts_path` and `path_to_clips`. For `audio_files`, you'll need to use [`~DownloadManager.iter_archive`] to iterate over the audio files in the TAR archives. This enables streaming for your dataset. All of these file paths are passed onto the next step where you'll actually generate the dataset.
 
 <Tip warning={true}>
 
-To stream a TAR archive file, you need to use [`DownloadManager.iter_archive`]! The [`DownloadManager.download_and_extract`] function does not support TAR archives in streaming mode.
+To support streaming TAR archive files, you need to use a combination of [`~DownloadManager.download`] and [`~DownloadManager.iter_archive`]! Data in TAR archives can't be accessed directly by their paths, so you'll need to download it first and then iterate over the files within the archive. The [`~DownloadManager.download_and_extract`] function does not support TAR archives in streaming mode and will raise an error. Streaming allows you to start using a dataset without waiting for it to be downloaded entirely. This is especially useful for audio datasets, which can be quite large!
 
 </Tip>
 
 ```py
 def _split_generators(self, dl_manager):
-    langs = (
-        _ALL_CONFIGS
-        if self.config.name == "all"
-        else [self.config.name]
-    )
-
-    archive_path = dl_manager.download_and_extract(self.config.data_url)
-    audio_path = dl_manager.extract(
-        os.path.join(archive_path, "MInDS-14", "audio.zip")
-    )
-    text_path = dl_manager.extract(
-        os.path.join(archive_path, "MInDS-14", "text.zip")
-    )
-
-    text_path = {l: os.path.join(text_path, f"{l}.csv") for l in langs}
+    """Returns SplitGenerators."""
+    prompts_paths = dl_manager.download(_PROMPTS_URLS)
+    archive = dl_manager.download(_DATA_URL)
+    train_dir = "vivos/train"
+    test_dir = "vivos/test"
 
     return [
         datasets.SplitGenerator(
             name=datasets.Split.TRAIN,
             gen_kwargs={
-                "audio_path": audio_path,
-                "text_paths": text_path,
+                "prompts_path": prompts_paths["train"],
+                "path_to_clips": train_dir + "/waves",
+                "audio_files": dl_manager.iter_archive(archive),
             },
-        )
+        ),
+        datasets.SplitGenerator(
+            name=datasets.Split.TEST,
+            gen_kwargs={
+                "prompts_path": prompts_paths["test"],
+                "path_to_clips": test_dir + "/waves",
+                "audio_files": dl_manager.iter_archive(archive),
+            },
+        ),
     ]
 ```
 
 ### Generate the dataset
 
-The last method in the [`GeneratorBasedBuilder`] class actually generates the audio and transcriptions in the dataset. It yields a dataset according to the stucture specified in `features` from the `info` method. As you can see, `generate_examples` accepts the `audio_path` and `text_paths` from the previous method as arguments.
+The last method in the [`GeneratorBasedBuilder`] class actually generates the audio data and sentences in the dataset. It yields a dataset according to the stucture specified in `features` from the `info` method. As you can see, `generate_examples` accepts the `prompts_path`, `path_to_clips`, and `audio_files` from the previous method as arguments.
 
 <Tip warning={true}>
 
-To stream a TAR archive file, it needs to be opened and read first. TAR files are accessed and yielded sequentially. This means you need to have the information in the TAR file in hand first so you can yield it with its corresponding audio file.
+To stream a TAR archive file, it needs to be opened and read first. TAR files are accessed and yielded sequentially. This means you need to have the information/metadata associated with the audio files in the TAR file in hand first so you can yield it with its corresponding audio file.
 
 </Tip>
 
 Now you can write a function for opening and loading examples from the dataset:
 
 ```py
-def _generate_examples(self, audio_path, text_paths):
-    key = 0
-    for lang in text_paths.keys():
-        text_path = text_paths[lang]
-        with open(text_path, encoding="utf-8") as csv_file:
-            csv_reader = csv.reader(csv_file, delimiter=",", skipinitialspace=True)
-            next(csv_reader)
-            for row in csv_reader:
-                file_path, transcription, english_transcription, intent_class = row
-
-                file_path = os.path.join(audio_path, *file_path.split("/"))
-                yield key, {
-                    "path": file_path,
-                    "audio": file_path,
-                    "transcription": transcription,
-                    "english_transcription": english_transcription,
-                    "intent_class": intent_class.lower(),
-                    "lang_id": _ALL_CONFIGS.index(lang),
-                }
-                key += 1
+def _generate_examples(self, prompts_path, path_to_clips, audio_files):
+    """Yields examples as (key, example) tuples."""
+    examples = {}
+    with open(prompts_path, encoding="utf-8") as f:
+        for row in f:
+            data = row.strip().split(" ", 1)
+            speaker_id = data[0].split("_")[0]
+            audio_path = "/".join([path_to_clips, speaker_id, data[0] + ".wav"])
+            examples[audio_path] = {
+                "speaker_id": speaker_id,
+                "path": audio_path,
+                "sentence": data[1],
+            }
+    inside_clips_dir = False
+    id_ = 0
+    for path, f in audio_files:
+        if path.startswith(path_to_clips):
+            inside_clips_dir = True
+            if path in examples:
+                audio = {"path": path, "bytes": f.read()}
+                yield id_, {**examples[path], "audio": audio}
+                id_ += 1
+        elif inside_clips_dir:
+            break
 ```
 
 ### Generate the dataset metadata (optional)
@@ -318,6 +340,12 @@ def _generate_examples(self, audio_path, text_paths):
 The dataset metadata you added earlier now needs to be generated and stored in a file called `datasets_infos.json`. In addition to information about a datasets features and description, this file also contains data file checksums to ensure integrity.
 
 Run the following command to generate your dataset metadata in `dataset_infos.json` and make sure your new loading script works correctly:
+
+<Tip warning={true}>
+
+Generating your dataset metadata requires downloading all the dataset files, which can take a lot of time and disk space, if your dataset is large!
+
+</Tip>
 
 ```bash
 datasets-cli test path/to/<your-dataset-loading-script> --save_infos --all_configs
